2017-07-24  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* nasl/nasl_grammar.y (INCLUDE): Zero subctx struct. Fixes clang
	analyzer error.

2017-07-24  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* nasl/exec.c (cell_cmp): Use cell2str() to copy the cell's values
	since it checks if the cell is NULL and	then are freed conveniently.

2017-07-20  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* nasl/nasl_grammar.y (naslerror): Replace fputs and fputc
	with g_message to avoid error messages end into syslog.

2017-07-19  Juan Jose Nicola  <juan.nicola@greenbone.net>

	Check if the included files are used or not.

	* nasl/lint.c (check_called_files, print_uncall_files):
	New functions.
	(nasl_lint_def): Get hash table as new parameter. Add into the table
	the included files.
	(nasl_lint_call): Get hash table as new parameter. Mark the included
	file in the table, if a called function is inside the file.
	(nasl_lint): New hash table. New single linked list. Pass the table as
	argument to nasl_lint_def() and nasl_lint_call() functions. Check if
	the included files are used or not.

2017-07-17  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* nasl/exec.c (cell2int3): Fix compilation with gcc 7.

2017-07-12  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* nasl/nasl_ssh.c (verify_session_id): Receive lexic as new parameter.
	Used nasl_perror instead of g_message to be able to show the NVT
	name in case of bad/invalid SSH session_id.
	(nasl_ssh_disconnect, nasl_ssh_get_sock, nasl_ssh_set_login)
	(nasl_ssh_userauth, nasl_ssh_login_interactive)
	(nasl_ssh_login_interactive_pass, nasl_ssh_request_exec)
	(nasl_ssh_get_issue_banner, nasl_ssh_get_server_banner)
	(nasl_ssh_get_auth_methods, nasl_ssh_shell_open, nasl_ssh_shell_read)
	(nasl_ssh_shell_write, nasl_ssh_shell_close): Pass lexic as argument
	when it calls verify_session_id().

	* nasl/nasl_text_utils.c (nasl_string): Add the string in the error
	message for the case "unknow scape sequence".
